# portainer-mcp

./: CLAUDE.md  Dockerfile  pyproject.toml
.github/workflows/: release-docker.yml
src/portainer_mcp/: server.py  swarm.py
tests/: test_swarm.py
