[project]
name = "mcp-portainer"
version = "2.42.7"
description = "Portainer MCP server — manage Docker, Kubernetes, stacks, and Helm via the Model Context Protocol."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.3,<4",
    "httpx>=0.27",
    "jmespath>=1.0",
    "pyyaml>=6.0",
    # transitive via fastmcp; pinned directly to hold a security floor
    # nothing upstream enforces — don't drop as redundant.
    "starlette>=1.0.1",
]

[project.scripts]
mcp-portainer = "portainer_mcp.server:main"
portainer-mcp = "portainer_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portainer_mcp"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
